fix: firefox scrollbars

--- a/pkg/frontend/src/styles/components/carousel.module.scss
+++ b/pkg/frontend/src/styles/components/carousel.module.scss
@@ -21,6 +21,8 @@
   padding: 20px 20px;
   margin: -10px -20px -20px;
   overscroll-behavior-x: none;
+  scrollbar-width: none;
+  -ms-overflow-style: none;
 
   @media (min-width: $lg) {
     padding: 100px $containerGutterSm;
